--- a/nextflow.config
+++ b/nextflow.config
@@ -225,6 +225,13 @@ params {
     max_cpus                   = 16
     max_time                   = '240.h'
 
+    // Schema validation default options
+    validationFailUnrecognisedParams = false
+    validationLenientMode            = false
+    validationSchemaIgnoreParams     = 'genomes'
+    validationShowHiddenParams       = false
+    validate_params                  = true
+
 }
 
 // Load base.config by default for all pipelines
